# GutterDone

./: .gitignore  EXAMPLE.xlsx  GutterDone.spec  README.md  config.py  gutter_done.spec  instructions.txt  manual_coords.py  mouse_pos.py  pyproject.toml  test_xl.xlsx
src/: config.json  gutter_done.py
