[project]
name = "express"
version = "0.1.0"
description = "tool to automatically run hydraflow calculations in civil3D"
authors = [
    {name = "Ian Silber"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyinstaller (>=6.14.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
